lib/tests/snapshots/btree__remove_sub_tree.snap
---
source: lib/tests/btree.rs
expression: tree
---
BTree {
    nodes: [
        Some(
            Node {
                data: "I'm root",
                key: Key(
                    0,
                ),
                parent: None,
                left: None,
                right: None,
            },
        ),
        None,
        None,
        None,
    ],
    empty_cells: [
        Key(
            2,
        ),
        Key(
            3,
        ),
        Key(
            1,
        ),
    ],
}
